tests/compile_fail/invalid_field_name.stderr
error: expected identifier
 --> tests/compile_fail/invalid_field_name.rs:5:9
  |
5 |         123invalid: String,
  |         ^^^^^^^^^^
